--- a/app/src/main/res/drawable/tv_trans_bg.xml
+++ b/app/src/main/res/drawable/tv_trans_bg.xml
@@ -4,6 +4,6 @@
     <solid android:color="#55555555" />
 
     <corners
-        android:bottomLeftRadius="@dimen/dim_15"
-        android:topRightRadius="@dimen/dim_15"/>
+        android:bottomLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
 </shape>
