--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,15 +21,15 @@
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/app_bar_layout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dim_230"
+                android:layout_height="250dp"
                 android:fitsSystemWindows="true">
 
                 <android.support.design.widget.CollapsingToolbarLayout
                     android:id="@+id/collapsing_toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dim_230"
+                    android:layout_height="250dp"
                     android:fitsSystemWindows="true"
-                    app:contentScrim="@null"
+                    app:contentScrim="#00000000"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
@@ -62,6 +62,7 @@
                         android:id="@+id/toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
+                        android:layout_alignParentBottom="true"
                         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                         app:layout_collapseMode="pin"
                         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
@@ -83,6 +84,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="20dp"
+                    android:paddingBottom="20dp"
                     android:orientation="vertical">
 
                     <com.localfriend.fonts.CustomFontTextView
@@ -95,12 +97,14 @@
                         app:textStyle="@integer/roboto_regular" />
 
                     <EditText
+                        android:id="@+id/edt_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/rounded_gray_edit_text"
                         android:drawableRight="@drawable/ic_edit"
                         android:inputType="text"
+                        android:imeOptions="actionDone"
                         android:padding="10dp"
                         android:textSize="16sp" />
 
@@ -115,6 +119,7 @@
                         app:textStyle="@integer/roboto_regular" />
 
                     <EditText
+                        android:id="@+id/edt_mail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -151,11 +156,13 @@
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/txt_dob"
                                 android:layout_marginTop="5dp"
+                                android:alpha=".5"
                                 android:background="@drawable/rounded_gray_edit_text"
                                 android:drawableRight="@drawable/ic_down"
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:text="DOB"
+                                android:textColor="@color/black"
                                 android:textSize="16sp"
                                 app:textStyle="@integer/roboto_regular" />
                         </RelativeLayout>
@@ -181,7 +188,8 @@
                                 android:textSize="16sp"
                                 app:textStyle="@integer/roboto_regular" />
 
-                            <com.localfriend.fonts.CustomFontTextView
+                            <Spinner
+                                android:id="@+id/spinner_gender"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/txt_gender"
@@ -189,10 +197,10 @@
                                 android:background="@drawable/rounded_gray_edit_text"
                                 android:drawableRight="@drawable/ic_down"
                                 android:gravity="center"
-                                android:padding="5dp"
+                                android:padding="1dp"
                                 android:text="MALE"
-                                android:textSize="16sp"
-                                app:textStyle="@integer/roboto_regular" />
+                                android:textColor="@color/black"
+                                android:textSize="16sp" />
                         </RelativeLayout>
                     </LinearLayout>
 
@@ -207,6 +215,7 @@
                         app:textStyle="@integer/roboto_regular" />
 
                     <EditText
+                        android:id="@+id/edt_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -227,12 +236,13 @@
                         app:textStyle="@integer/roboto_regular" />
 
                     <EditText
+                        android:id="@+id/edt_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/rounded_gray_edit_text"
                         android:drawableRight="@drawable/ic_edit"
-                        android:inputType="phone"
+                        android:inputType="text"
                         android:padding="10dp"
                         android:textSize="16sp" />
 
@@ -247,14 +257,29 @@
                         app:textStyle="@integer/roboto_regular" />
 
                     <EditText
+                        android:id="@+id/edt_i_am"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/rounded_gray_edit_text"
                         android:drawableRight="@drawable/ic_edit"
-                        android:inputType="phone"
+                        android:inputType="text"
                         android:padding="10dp"
+                        android:text="Student"
                         android:textSize="16sp" />
+
+                    <com.localfriend.fonts.CustomFontTextView
+                        android:id="@+id/txt_update"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/curvy_gradient_white_bg"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:text="Update Profile"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:textStyle="@integer/roboto_regular" />
 
                     <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/txt_logout"
@@ -263,6 +288,7 @@
                         android:layout_marginBottom="@dimen/dim_20"
                         android:layout_marginTop="20dp"
                         android:background="@drawable/curvy_gradient_white_bg"
+                        android:gravity="center"
                         android:padding="10dp"
                         android:text="Logout"
                         android:textColor="@color/white"
