--- a/app/src/main/res/layout/bottom.xml
+++ b/app/src/main/res/layout/bottom.xml
@@ -92,6 +92,7 @@
             android:layout_alignRight="@+id/tv_cart"
             android:layout_marginRight="-5dp"
             android:layout_marginTop="5dp"
+            android:text="0"
             android:background="@drawable/counter_cart"
             android:gravity="center"
             android:textColor="@color/white"
