--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             android:src="@drawable/home_bg" />
 
         <LinearLayout
@@ -217,7 +218,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:text="Fast Food"
+                        android:text="Food"
                         android:textColor="@color/gray_text"
                         android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
