--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -19,7 +19,7 @@
             android:layout_height="@dimen/dim_75"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dim_15"
-            android:src="@drawable/markzuckerberg"
+            android:src="@drawable/default_pic"
             app:civ_border_color="#FF000000"
             app:civ_border_width="1dp" />
 
