--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_bg"
+    android:background="#ECF2F2"
     tools:context="com.localfriend.fragments.PaymentFragment">
 
     <ScrollView
@@ -19,7 +19,7 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="130dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="50dp"
                 android:background="@null"
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="70dp"
                 android:text="Please Choose Your Payment Method"
                 android:textColor="@color/gray_text_light"
                 android:textSize="16sp"
