--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -184,7 +184,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Total Amount"
+                    android:text="Sub Total"
                     android:textColor="@color/blue_text"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_regular" />
@@ -220,7 +220,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Payble amount"
+                    android:text="Payable Amount"
                     android:textColor="@color/blue_text"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_regular" />
