--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Total Amount"
+                    android:text="Sub Total"
                     android:textColor="@color/blue_text"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_regular" />
@@ -194,7 +194,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Payble amount"
+                    android:text="Payable Amount"
                     android:textColor="@color/blue_text"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_regular" />
