--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -23,6 +23,7 @@
         android:layout_marginRight="-10dp"
         android:layout_marginTop="10dp"
         android:background="@color/white"
+        android:gravity="center_vertical"
         android:drawableLeft="@drawable/more_profile"
         android:drawablePadding="15dp"
         android:drawableRight="@drawable/ic_next"
@@ -43,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="-10dp"
         android:background="@color/white"
+        android:gravity="center_vertical"
         android:drawableLeft="@drawable/more_change_pasword"
         android:drawablePadding="15dp"
         android:drawableRight="@drawable/ic_next"
@@ -68,6 +70,7 @@
         android:drawableLeft="@drawable/more_tc"
         android:drawablePadding="15dp"
         android:drawableRight="@drawable/ic_next"
+        android:gravity="center_vertical"
         android:padding="15dp"
         android:text="Terms &amp; Conditions"
         android:textColor="@color/gray_text"
@@ -84,6 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="-10dp"
+        android:gravity="center_vertical"
         android:background="@color/white"
         android:drawableLeft="@drawable/more_feedback"
         android:drawablePadding="15dp"
@@ -107,6 +111,7 @@
         android:background="@color/white"
         android:drawableLeft="@drawable/more_about"
         android:drawablePadding="15dp"
+        android:gravity="center_vertical"
         android:drawableRight="@drawable/ic_next"
         android:padding="15dp"
         android:text="About Us"
