--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -112,9 +112,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/dim_10"
-        android:layout_marginLeft="@dimen/dim_20"
-        android:layout_marginRight="@dimen/dim_20"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:background="@drawable/curvy_gradient_white_bg"
         android:gravity="center"
         android:padding="@dimen/dim_10"
