--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -185,6 +185,7 @@
                 android:hint="Pin Code"
                 android:imeOptions="actionUnspecified"
                 android:inputType="number"
+                android:maxLength="6"
                 android:maxLines="1"
                 android:padding="@dimen/dim_10"
                 android:textColor="@color/black"
