--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -28,7 +28,7 @@
             app:tabTextColor="@color/black" />
 
 
-        <android.support.v4.view.ViewPager
+        <com.localfriend.utils.CustomViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
