--- a/app/src/main/res/layout/activity_order_placed.xml
+++ b/app/src/main/res/layout/activity_order_placed.xml
@@ -13,9 +13,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:adjustViewBounds="true"
         android:scaleType="centerCrop"
+        android:layout_marginBottom="120dp"
         android:src="@drawable/balloon_success" />
 
     <com.localfriend.fonts.CustomFontTextView
@@ -34,9 +33,12 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:padding="10dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="Go to shopping"
+            android:padding="9dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:background="@drawable/rounded_gray_solid"
+            android:textColor="@color/colorAccent"
+            android:text="Keep shopping"
             android:textSize="18sp"
             app:textStyle="@integer/roboto_medium" />
 
@@ -44,6 +46,7 @@
             android:id="@+id/txt_track_order"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:layout_above="@+id/txt_go_shopping"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
@@ -55,26 +58,26 @@
             android:textSize="18sp"
             app:textStyle="@integer/roboto_medium" />
 
-        <com.localfriend.fonts.CustomFontTextView
+        <com.localfriend.fonts.CustomFontPtSansText
             android:id="@+id/txt_notification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/txt_track_order"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="40dp"
             android:gravity="center_horizontal"
             android:padding="15dp"
             android:text="We will send you notification when the order will be delivered."
             android:textColor="@color/gray_tab"
             app:textStyle="@integer/roboto_medium" />
 
-        <com.localfriend.fonts.CustomFontTextView
+        <com.localfriend.fonts.CustomFontPtSansText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/txt_notification"
             android:gravity="center_horizontal"
-            android:text="Congratulations!!\nYour order is on the way"
-            android:textColor="@color/gray_text"
+            android:text="Congratulations.\nYour order is accepted"
+            android:textColor="@color/black"
             android:textSize="22sp"
-            app:textStyle="@integer/roboto_bold" />
+            app:textStyle="@integer/roboto_medium" />
     </RelativeLayout>
 </RelativeLayout>
