--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -214,13 +214,12 @@
                         android:textSize="16sp"
                         app:textStyle="@integer/roboto_regular" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/edt_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/rounded_gray_edit_text"
-                        android:drawableRight="@drawable/ic_edit"
                         android:inputType="phone"
                         android:padding="10dp"
                         android:textSize="16sp" />
@@ -256,17 +255,30 @@
                         android:textSize="16sp"
                         app:textStyle="@integer/roboto_regular" />
 
-                    <EditText
-                        android:id="@+id/edt_i_am"
+                    <Spinner
+                        android:id="@+id/spinner_im"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_below="@+id/txt_gender"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/rounded_gray_edit_text"
-                        android:drawableRight="@drawable/ic_edit"
-                        android:inputType="text"
-                        android:padding="10dp"
+                        android:drawableRight="@drawable/ic_down"
+                        android:gravity="center"
+                        android:padding="5dp"
                         android:text="Student"
+                        android:textColor="@color/black"
                         android:textSize="16sp" />
+                    <!--<EditText-->
+                        <!--android:id="@+id/edt_i_am"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginTop="5dp"-->
+                        <!--android:background="@drawable/rounded_gray_edit_text"-->
+                        <!--android:drawableRight="@drawable/ic_edit"-->
+                        <!--android:inputType="text"-->
+                        <!--android:padding="10dp"-->
+                        <!--android:text="Student"-->
+                        <!--android:textSize="16sp" />-->
 
                     <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/txt_update"
