--- a/app/src/main/res/layout/checkout_item.xml
+++ b/app/src/main/res/layout/checkout_item.xml
@@ -8,13 +8,13 @@
     android:layout_marginTop="10dp"
     android:orientation="vertical">
 
-    <com.localfriend.fonts.CustomFontTextView
+    <com.localfriend.fonts.CustomFontPtSansText
         android:id="@+id/txt_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DELIVERY TIMING"
         android:textColor="@color/gray_text_light"
-        android:textSize="15sp"
+        android:textSize="14sp"
         app:textStyle="@integer/roboto_medium" />
 
     <android.support.v7.widget.CardView
@@ -48,20 +48,20 @@
                     android:layout_marginLeft="10dp"
                     android:text="Total Price :- Rs 100"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     app:textStyle="@integer/roboto_medium" />
 
-                <com.localfriend.fonts.CustomFontTextView
+                <com.localfriend.fonts.CustomFontPtSansText
                     android:id="@+id/txt_view_items"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@+id/img_view_items"
                     android:gravity="center_vertical"
                     android:text="View items"
-                    android:padding="5dp"
+                    android:padding="4dp"
                     android:textColor="@color/blue_text"
-                    android:textSize="12sp"
+                    android:textSize="13sp"
                     app:textStyle="@integer/roboto_medium" />
 
                 <ImageView
@@ -85,17 +85,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <com.localfriend.fonts.CustomFontTextView
+                <com.localfriend.fonts.CustomFontPtSansText
                     android:id="@+id/select_time"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:paddingTop="12dp"
                     android:paddingBottom="5dp"
                     android:text="Tomorrow, 8 AM - 10 AM"
                     android:textColor="@color/blue_text"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     app:textStyle="@integer/roboto_medium" />
 
                 <ImageView
