--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Sub Total"
+                    android:text="Total Amount"
                     android:textColor="@color/blue_text"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_regular" />
