--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -27,11 +27,11 @@
                 android:paddingRight="@dimen/dim_10"
                 android:paddingTop="5dp">
 
-                <com.localfriend.fonts.CustomFontTextView
+                <com.localfriend.fonts.CustomFontPtSansText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Delivery Address"
                     android:layout_marginLeft="3dp"
+                    android:text="Delivery Address"
                     android:textColor="@color/gray_text_light"
                     android:textSize="15sp"
                     app:textStyle="@integer/roboto_medium" />
@@ -39,9 +39,9 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginTop="8dp"
                     android:elevation="5dp"
                     app:cardBackgroundColor="@color/white">
 
@@ -92,12 +92,12 @@
 
                 </android.support.v7.widget.CardView>
 
-                <com.localfriend.fonts.CustomFontTextView
+                <com.localfriend.fonts.CustomFontPtSansText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
                     android:layout_marginTop="12dp"
                     android:text="Payment mode"
-                    android:layout_marginLeft="5dp"
                     android:textColor="@color/gray_text_light"
                     android:textSize="15sp"
                     app:textStyle="@integer/roboto_medium" />
@@ -107,8 +107,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
-                    android:layout_marginTop="5dp"
-                     >
+                    android:layout_marginTop="5dp">
 
                     <RelativeLayout
                         android:id="@+id/rl_cod"
@@ -123,18 +122,18 @@
                             android:layout_centerVertical="true"
                             android:drawableLeft="@drawable/ic_cod"
                             android:drawablePadding="@dimen/dim_10"
+                            android:padding="5dp"
                             android:text="Cash on Delivery"
                             android:textColor="@color/black"
-                            android:padding="5dp"
                             android:textSize="16sp"
                             app:textStyle="@integer/roboto_regular" />
 
                         <!--<RadioButton-->
-                            <!--android:layout_width="wrap_content"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_alignParentRight="true"-->
-                            <!--android:layout_centerVertical="true"-->
-                            <!--android:checked="true" />-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_alignParentRight="true"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:checked="true" />-->
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
 
@@ -184,7 +183,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Sub Total"
+                    android:text="Total Amount"
                     android:textColor="@color/blue_text"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_regular" />
@@ -241,7 +240,7 @@
     </android.support.v7.widget.CardView>
 
     <com.localfriend.fonts.CustomFontTextView
-            android:id="@+id/tv_make_payment"
+        android:id="@+id/tv_make_payment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -254,7 +253,7 @@
         android:padding="@dimen/dim_10"
         android:text="Place my order"
         android:textColor="@color/white"
-        android:textSize="@dimen/dim_15"
+        android:textSize="16sp"
         app:textStyle="@integer/roboto_medium" />
 
     <RelativeLayout
