--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -27,7 +27,7 @@
                 android:paddingRight="@dimen/dim_10"
                 android:paddingTop="@dimen/dim_10">
 
-                <com.localfriend.fonts.CustomFontTextView
+                <com.localfriend.fonts.CustomFontPtSansText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Delivery Address"
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Sub Total"
+                    android:text="Total Amount"
                     android:textColor="@color/blue_text"
                     android:textSize="14sp"
                     app:textStyle="@integer/roboto_regular" />
@@ -225,7 +225,7 @@
         android:background="@drawable/curvy_gradient_white_bg"
         android:gravity="center"
         android:padding="@dimen/dim_10"
-        android:text="Make Payment"
+        android:text="Proceed to payment"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:textStyle="@integer/roboto_medium" />
