--- a/app/src/main/res/layout/menu_left_drawer.xml
+++ b/app/src/main/res/layout/menu_left_drawer.xml
@@ -31,7 +31,7 @@
             app:civ_border_color="#FF3CBEA3"
             app:civ_border_width="1dp" />
 
-        <com.localfriend.fonts.CustomFontTextView
+        <com.localfriend.fonts.CustomFontPtSansText
             android:id="@+id/txt_user_name"
             app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
