--- a/app/src/main/res/layout/vegetable_items.xml
+++ b/app/src/main/res/layout/vegetable_items.xml
@@ -25,7 +25,7 @@
             android:id="@+id/tv_cost_old"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="13dp"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/tv_cost"
             android:paddingTop="@dimen/dim_3"
@@ -46,7 +46,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="12dp"
             android:layout_above="@+id/tv_add_cart">
 
             <ImageView
@@ -57,7 +57,7 @@
                 android:background="@null"
                 android:src="@drawable/place_holder" />
 
-            <com.localfriend.fonts.CustomFontTextView
+            <com.localfriend.fonts.CustomFontPtSansText
                 android:id="@+id/tv_veg_name"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="20dp"
@@ -68,10 +68,10 @@
                 android:gravity="center"
                 android:text="Shimla Apple"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:textStyle="@integer/roboto_medium" />
 
-            <com.localfriend.fonts.CustomFontTextView
+            <com.localfriend.fonts.CustomFontPtSansText
                 android:id="@+id/txt_unit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -80,7 +80,7 @@
                 android:gravity="center"
                 android:text="Shimla Apple"
                 android:textColor="@color/gray_tab"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 app:textStyle="@integer/roboto_medium" />
         </RelativeLayout>
 
@@ -90,7 +90,7 @@
         <!--android:layout_above="@+id/tv_add_cart"-->
         <!--android:background="@color/colorPrimaryDark" />-->
 
-        <com.localfriend.fonts.CustomFontTextView
+        <com.localfriend.fonts.CustomFontPtSansText
             android:id="@+id/tv_add_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
