--- a/app/src/main/res/layout/fragment_tiffin.xml
+++ b/app/src/main/res/layout/fragment_tiffin.xml
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Monthly Offer"
+                android:text="Offers"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:textStyle="@integer/roboto_medium" />
