--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="gray_text">#575455</color>
     <color name="gray_text_light">#999999</color>
     <color name="transparent">#80000000</color>
+    <color name="monthlyPriceColor">#22749D</color>
 
 
 </resources>
